--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_cs.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_cs.arb
@@ -2,95 +2,104 @@
   "@@locale": "cs",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "ok": "Ok",
+  "yes": "Ano",
+  "no": "Ne",
+  "cancel": "Zrušit",
+  "textContinue": "Pokračovat",
+  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorText": "Něco pokazilo. Zkuste to prosím později.",
+  "skip": "Přeskočit",
+  "neutral": "Neutrální",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Vypadá to, že nejste připojeni k internetu",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Pokračujme v anglickém jazyce :)",
+  "languagePageSubtitle": "Toto lze změnit později v sekci Nastavení.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceMatchesFoundQuote": "Nalezeno {count} shodných výsledků za posledních 24 h",
+  "entranceStartButton": "Spustit Palumbu",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Maďarsko",
+  "denmark": "Dánsko",
+  "germany": "Německo",
+  "spain": "Španělsko",
+  "france": "Francie",
+  "poland": "Polsko",
+  "romania": "Rumunsko",
+  "sweden": "Švédsko",
+  "onBoardingStep1Title": "Ve které zemi budete hlasovat?",
+  "onBoardingStep1Subtitle": "Nevím",
+  "onBoardingStep2Title": "Můj věk",
+  "onBoardingStep3Title": "Identifikuji se jako",
+  "onBoardingStep3Option1": "Žena",
+  "onBoardingStep3Option2": "Muž",
+  "onBoardingStep3Option3": "Genderfluidní",
+  "onBoardingStep3Option4": "Nebinární",
+  "onBoardingStep3Option5": "Jinak",
+  "onBoardingNotAnswerButton": "Nechci uvádět",
+  "onBoardingCardQuestion": "Nemám ponětí, pro koho budu hlasovat v evropských volbách roku 2024",
+  "onBoardingLastStepTitle": "Přetáhněte dle svých preferencí",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Vaše výsledky jsou na cestě :)",
+  "loadingResultsPageTitle2": "Bude to rychlejší než prodej lístků na Taylor Swift ",
+  "loadingResultsPageTitle3": "Hledám shodu s kandidáty v {country}",
+  "loadingResultsPageTitle4": "Téměř připraveno,<br>ještě poslední kontrola...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Shoda a mnohem více",
+  "resultsPage1Text": "Na následujících obrazovkách se dozvíte, s jakou skupinou v Evropském parlamentu se nejvíce ztotožňujete, naleznete odpovídající kandidáty, pro které můžete v červnu ve vaší zemi hlasovat. Na základě vašich odpovědí jsme dokonce jsme našli několik dalších zajímavostí 😌",
+  "resultsPage1Button": "Stiskněte pro pokračování",
+  "resultsPage2_1Title": "Upřímně řečeno, mezi",
+  "resultsPage2_2Title": "a mnou, je to tak trochu Love Story (verze EU)",
+  "resultsPage3Title": "Jak blízko mám ke skupinám Evropského parlamentu",
+  "resultsPage4TitleTop": "Pro evropskou integraci",
+  "resultsPage4TitleBottom": "Proti evropské integraci",
+  "resultsPage4TitleLeft": "Levicové",
+  "resultsPage4TitleRight": "Pravicové",
+  "resultsPage4TitleUserHere": "To jsem já, ahoj!",
+  "resultsPage5Title": "Pokud jde o konkrétnější témata, ke které skupině Evropského parlamentu mám blíže?",
+  "resultsPage5Topic1": "Otázky životního prostředí",
+  "resultsPage5Topic2": "Lidská a sociální práva",
+  "resultsPage5Topic3": "Hospodářské intervence",
+  "resultsPage6_1Title": "Ok, je skvělé vědět, ke které skupině mám nejblíž...",
+  "resultsPage6_2Title": "Při evropských volbách však hlasujeme pro místní kandidáty",
+  "resultsPage6Text": "Na následujících obrazovkách naleznete seznamy kandidátů ve vaší zemi, se kterými se pravděpodobně shodujete nejvíce.",
+  "resultsPage7Title": "Kandidáti v {country} mají nejblíže ke {group}",
+  "resultsPage7Disclaimer": "Bez konkrétního pořadí.",
+  "resultsPage7NoLocalCandidates": "V {country} jsme nenalezli žádné místní strany",
+  "resultsPage8_1Text": "V {topic}, se z {percentage} % shodujete v",
+  "resultsPage8_2Text": "Aktivní opatření v oblasti klimatu 🌱😌",
+  "resultsPage8Help": "Jste bojovníkem za změnu klimatu! Věříte, že boj proti klimatické krizi vyžaduje kolektivní přístup, přičemž z něj každý učiní svou hlavní prioritu. Nevadí vám regulace společností ze strany EU. Vždyť jaký užitek má hospodářský růst ve chvíli, kdy se planeta stane neobyvatelnou?",
+  "resultsPage9Help": "Pro zamíchání klikněte na karty",
+  "resultsPage9Text1": "Volby se týkají mnoha témat, ale jedna věc je",
+  "resultsPage9Text2": "Pro mě nejdůležitější",
+  "resultsPage10Title": "Upozornit mě, až bude čas jít volit?",
+  "resultsPage10NopButton": "Ne, díky!",
+  "resultsPage10YesButton": "Jasněěě",
+  "resultsShare": "Sdílet",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "Nalezeno {count} shodných výsledků za posledních 24 h",
+  "homePageBackToTest": "Zpět k testu",
+  "homePageMyResults": "Mé výsledky",
+  "homePageStartButton": "Spustit nový test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Jazyk",
+  "settingsPageSubtitleLanguage": "Preferuji používat tuto aplikaci v",
+  "settingsPageTextLanguage": "Pro změnu jazyka klikněte na výše uvedený",
+  "settingsPageTitleAbout": "O nás",
+  "settingsPageTextAbout": "Palumba není společnost, politická strana, ani vláda. Jsme nezávislé neziskové sdružení 120+ mladých lidí 🐦 z celé Evropy, kteří se sešli loni v létě a začali s realizací této aplikace. Máme jeden cíl: pomoci vám lépe pochopit, jak fungují evropské volby a kteří kandidáti by mohli být nejblíže k vašim představám, abyste tak mohli s větší jistotou hlasovat pro lidi, kteří podporují vaše priority. Náš algoritmus je otevřený zdrojový kód, prohlášení, se kterými hledáte shodu, byla přezkoumána politology, a vaše data jsou zašifrovaná, takže neexistuje žádný způsob, jak bychom vás mohli identifikovat :)",
+  "settingsPageTitleAssociation": "Asociace",
+  "settingsPageTitlePartners": "Partneři",
+  "settingsPageTextPartners": "Deklarujeme, že následující partneři nemají žádným způsobem neovlivnili obsah aplikace, která zůstává nestrannou iniciativou s jasným cílem: pomůže vám pochopit, kdo podporuje vaše názory na evropské a vnitrostátní úrovni.",
+  "settingsPageSubtitle1": "Hlavní sponzoři",
+  "settingsPageSubtitle2": "Evropští partneři",
+  "settingsPageSubtitle3": "Akademičtí partneři",
+  "settingsPageSubtitle4": "Partneři z národních institucí",
+  "settingsPageSubtitle5": "Poskytovatelé služeb",
+  "settingsPageShareButtonText": "Sdílet",
+  "settingsPagePrivacyPolicy": "Zásady ochrany osobních údajů"
 }
