--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hu.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hu.arb
@@ -2,95 +2,104 @@
   "@@locale": "hu",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "Oké",
+  "yes": "Igen",
+  "no": "Nem",
+  "cancel": "Mégsem",
+  "textContinue": "Tovább",
+  "alertServerErrorTitle": "Hoppá!",
+  "alertServerErrorText": "Valami elromlott a mi oldalunkon. Kérlek, próbáld újra később.",
+  "skip": "Átugrás",
+  "neutral": "Közömbös",
+  "faq": "GYIK",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Úgy tűnik, hogy nincs internetkapcsolatod",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Folytassuk magyarul? :)",
+  "languagePageSubtitle": "Ez később módosítható a beállításokban.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Ha ez a cuki galamb nem tud segíteni szavazni júniusban, akkor semmi sem fog.",
+  "entranceTitle2": "Jobbra vagy balra húzással dönthetsz a számodra fontos kérdésekben.",
+  "entranceTitle3": "Fedezd fel a 'matchedet' és egy kis iránymutatást arról, hogy kire érdemes szavaznod a választásokon.",
+  "entranceMatchesFoundQuote": "{count} kitöltés az elmúlt 24 órában",
+  "entranceStartButton": "Mehet a Palumba?",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Magyarország",
+  "denmark": "Dánia",
+  "germany": "Németország",
+  "spain": "Spanyolország",
+  "france": "Franciaország",
+  "poland": "Lengyelország",
+  "romania": "Románia",
+  "sweden": "Svédország",
+  "onBoardingStep1Title": "Hol fogsz szavazni?",
+  "onBoardingStep1Subtitle": "Nem tudom",
+  "onBoardingStep2Title": "Életkorom",
+  "onBoardingStep3Title": "Nemem",
+  "onBoardingStep3Option1": "Nő",
+  "onBoardingStep3Option2": "Férfi",
+  "onBoardingStep3Option3": "Genderfluid",
+  "onBoardingStep3Option4": "Nonbináris",
+  "onBoardingStep3Option5": "Más",
+  "onBoardingNotAnswerButton": "Inkább nem válaszolok",
+  "onBoardingCardQuestion": "Elképzelésem sincs, hogy kire szavazzak a 2024-es európai választásokon",
+  "onBoardingLastStepTitle": "Húzd abba az irányba, amellyel egyetértesz",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Úton vannak a személyre szabott eredményeid :)",
+  "loadingResultsPageTitle2": "Ez gyorsabban meglesz, mint egy Taylor Swift-jegy vásárlása 👀 ",
+  "loadingResultsPageTitle3": "Párosítás a jelöltlistákkal itt: {country}  🔍",
+  "loadingResultsPageTitle4": "Majdnem kész,<br>csak az utolsó simítások...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Egy 'match' és sok más 👉👈",
+  "resultsPage1Text": "A következőkben felfedezheted a hozzád illő parlamenti képviselőcsoportot az EP-ben, az ehhez passzoló helyi listákat, amelyekre júniusban szavazhatsz majd az országodban, illetve mutatunk egy pár extra dolgot is a válaszaid alapján 😌",
+  "resultsPage1Button": "Koppintással lapozz",
+  "resultsPage2_1Title": "Őszintén, a(z)",
+  "resultsPage2_2Title": "között és köztem ez egy Love Story (EU’s Version)",
+  "resultsPage3Title": "Mennyire állok közel az európai parlamenti képviselőcsoportokhoz",
+  "resultsPage4TitleTop": "EU integráció-párti",
+  "resultsPage4TitleBottom": "EU integráció-ellenes",
+  "resultsPage4TitleLeft": "Baloldal",
+  "resultsPage4TitleRight": "Jobboldal",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Konkrétabb kérdésekben melyik európai parlamenti képviselőcsoporthoz állok közelebb?",
+  "resultsPage5Topic1": "Környezeti problémák",
+  "resultsPage5Topic2": "Emberi és szociális jogok",
+  "resultsPage5Topic3": "Gazdasági beavatkozás",
+  "resultsPage6_1Title": "Oké, jó tudni, hogy melyik képviselőcsoport ért meg igazán...",
+  "resultsPage6_2Title": "De az európai választásokon egy helyi listára szavazunk",
+  "resultsPage6Text": "A következőkben felfedezheted az országod jelöltlistáit, amelyek vélhetően a hozzád közel álló képviselőcsoporthoz csatlakoznak majd.",
+  "resultsPage7Title": "{country} jelöltjei, akik legnagyobb összhangban vannak a(z) {group} képviselőcsoporttal",
+  "resultsPage7Disclaimer": "Véletlenszerű sorrendben.",
+  "resultsPage7NoLocalCandidates": "Nem találtunk helyi pártot itt: {country}",
+  "resultsPage8_1Text": "A(z) {topic} kérdésében {percentage}% -ban közelebb áll hozzád:",
+  "resultsPage8_2Text": "Aktív klímavédelem 🌱😌",
+  "resultsPage8Help": "Egy igazi klímaharcos vagy! Úgy gondolod, hogy a klímaválság együttes fellépést kíván, ezért mindenki fő prioritásává kell válnia. Téged nem zavar, ha az EU ebből a célból szabályozza a cégeket. Végül is mi haszna a gazdasági növekedésnek, ha a bolygó közben lakhatatlanná válik?",
+  "resultsPage9Help": "Cseréhez koppints a kártyákra",
+  "resultsPage9Text1": "A választások sok mindenről szólnak, de van egy dolog, ami tényleg",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Szeretnél emlékeztetőt kapni, hogy mikor kell szavazni menni?",
+  "resultsPage10NopButton": "Köszönöm, nem!",
+  "resultsPage10YesButton": "Igeeen",
+  "resultsShare": "Megosztás",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} „párt\" találtunk az elmúlt 24 órában",
+  "homePageBackToTest": "Vissza a kitöltéshez",
+  "homePageMyResults": "Eredményeim",
+  "homePageStartButton": "Új teszt indítása",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Nyelv",
+  "settingsPageSubtitleLanguage": "Az appot az alábbi nyelven szeretném használni",
+  "settingsPageTextLanguage": "A nyelv módosításához koppints a jelenleg kiválasztottra",
+  "settingsPageTitleAbout": "Rólunk",
+  "settingsPageTextAbout": "A Palumba nem egy cég, nem egy politikai párt, nem is egy kormány. Független, nonprofit szervezet vagyunk, amely 120+ fiatalból áll🐦 szerte Európából. Tavaly nyáron összeültünk és elkezdtünk ezen az appon dolgozni. Egy célunk van: szeretnénk neked segíteni jobban megérteni, hogy hogyan működnek az európai parlamenti választások, melyik jelöltlisták egyezhetnek az elképzeléseiddel, azért, hogy biztosan olyanokra szavazz, akik a Te prioritásaidat támogatják. Az algoritmusunk nyílt forráskódú, az állításokat amiket látsz majd, politikai szakértők is átnézték, és az adataidat titkosítottuk, szóval esélytelen, hogy valaha is beazonosítsunk a válaszaid alapján. :)",
+  "settingsPageTitleAssociation": "A szervezet",
+  "settingsPageTitlePartners": "Partnereink",
+  "settingsPageTextPartners": "Fontosnak tartjuk elmondani, hogy a támogatóink nem szólhattak bele az app tartalmába, amely továbbra is egy pártoktól független kezdeményezés egyetlen világos céllal: segítsünk neked megismerni, hogy ki támogatja a te véleményed európai és tagállami szinten.",
+  "settingsPageSubtitle1": "Kiemelt támogatóink",
+  "settingsPageSubtitle2": "Európai támogatóink",
+  "settingsPageSubtitle3": "Akadémiai támogatóink",
+  "settingsPageSubtitle4": "Nemzeti intézményi támogatóink",
+  "settingsPageSubtitle5": "Szolgáltatók",
+  "settingsPageShareButtonText": "Megosztás",
+  "settingsPagePrivacyPolicy": "Adatvédelmi irányelvek"
 }
