--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
@@ -2,95 +2,104 @@
   "@@locale": "sk",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "Ok",
+  "yes": "Áno",
+  "no": "Nie",
+  "cancel": "Zrušiť",
+  "textContinue": "Pokračovať",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Niečo sa pokazilo na našom serveri. Skúste to neskôr, prosím.",
+  "skip": "Preskočiť",
+  "neutral": "Neutrálne",
+  "faq": "Často kladené otázky",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Vyzerá to, že nemáte pripojenie na internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Pokračujme v angličtine? :)",
+  "languagePageSubtitle": "Túto možnosť môžete neskôr zmeniť v nastaveniach.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Ak vám tento roztomilý holub nepomôže v júni voliť, tak už nič.",
+  "entranceTitle2": "'Swipnite' (odlistujte) názory na témy, ktoré vás zaujímajú.",
+  "entranceTitle3": "Nájdite svoj 'match' (zhodu) a zorientujte sa v tom, koho voliť vo voľbách.",
+  "entranceMatchesFoundQuote": "{count} zhody nájdené za posledných 24 hodín",
+  "entranceStartButton": "Spustiť Palumbu",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Maďarsko",
+  "denmark": "Dánsko",
+  "germany": "Nemecko",
+  "spain": "Španielsko",
+  "france": "Francúzsko",
+  "poland": "Poľsko",
+  "romania": "Rumunsko",
+  "sweden": "Švédsko",
+  "onBoardingStep1Title": "Kde budete voliť?",
+  "onBoardingStep1Subtitle": "Neviem",
+  "onBoardingStep2Title": "Môj vek",
+  "onBoardingStep3Title": "Identifikujem sa ako",
+  "onBoardingStep3Option1": "Žena",
+  "onBoardingStep3Option2": "Muž",
+  "onBoardingStep3Option3": "Rodovo fluidný (gender-fluid)",
+  "onBoardingStep3Option4": "Nebinárny",
+  "onBoardingStep3Option5": "Inak",
+  "onBoardingNotAnswerButton": "Nechcem uviesť",
+  "onBoardingCardQuestion": "Nemám poňatia, koho budem voliť vo voľbách do Európskeho parlamentu v roku 2024",
+  "onBoardingLastStepTitle": "'Swipnite' (odlistujte) prstom podľa vašich preferencií",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Vaše personalizované výsledky sú na ceste :)",
+  "loadingResultsPageTitle2": "Bude to rýchlejšie ako zohnať lístky na Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Vyhľadávanie zhody so zoznamami kandidátov v {country}",
+  "loadingResultsPageTitle4": "Takmer hotovo, posledná kontrola...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Zhoda a oveľa viac 👉👈",
+  "resultsPage1Text": "Na nasledujúcich obrazovkách zistíte, s ktorou skupinou v Európskom parlamente sa najviac stotožňujete. Tiež nájdete príslušné kandidátne listiny, ktoré môžte v júni voliť vo svojej krajine. Na základe vašich odpovedí sme dokonca zistili niekoľko ďalších zaujímavostí 😌",
+  "resultsPage1Button": "Stlačte pre pokračovanie",
+  "resultsPage2_1Title": "Úprimne, medzi",
+  "resultsPage2_2Title": "a mnou, je to niečo ako Love Story (EÚ verzia)",
+  "resultsPage3Title": "Ako blízko mám ku skupinám Európskeho parlamentu",
+  "resultsPage4TitleTop": "Za európsku integráciu",
+  "resultsPage4TitleBottom": "Proti európskej integrácii",
+  "resultsPage4TitleLeft": "Ľavica",
+  "resultsPage4TitleRight": "Pravica",
+  "resultsPage4TitleUserHere": "To som ja, ahoj!",
+  "resultsPage5Title": "Pokiaľ ide o konkrétnejšie témy, ku ktorej skupine Európskeho parlamentu mám bližšie?",
+  "resultsPage5Topic1": "Otázky životného prostredia",
+  "resultsPage5Topic2": "Ľudské a sociálne práva",
+  "resultsPage5Topic3": "Hospodárska intervencia",
+  "resultsPage6_1Title": "Ok, je super vedieť, ktorá skupina ma chápe...",
+  "resultsPage6_2Title": "Vo voľbách do EÚ však hlasujeme za miestnych kandidátov",
+  "resultsPage6Text": "Na ďalších obrazovkách nájdete kandidátne listiny vo vašej krajine, ktoré sa s najväčšou pravdepodobnosťou pripoja k skupine s ktorou sa najviac zhodujete.",
+  "resultsPage7Title": "Kandidáti na {country}, ktorí sú najviac v súlade s {group}",
+  "resultsPage7Disclaimer": "Bez určenia poradia.",
+  "resultsPage7NoLocalCandidates": "Žiadne miestne strany sa na {country} nenašli",
+  "resultsPage8_1Text": "V téme {topic} si na {percentage} viac do",
+  "resultsPage8_2Text": "Aktívne opatrenia v oblasti klímy 🌱😌",
+  "resultsPage8Help": "Ste bojovníkom proti klimatickým zmenám! Veríte, že boj proti klimatickej kríze si vyžaduje kolektívny prístup, ktorý by mal byť prioritou pre každého. Nevadí vám regulácia podnikov zo strany EÚ. Veď načo je hospodársky rast, keď sa planéta stane neobývateľnou?",
+  "resultsPage9Help": "Pre zamiešanie kliknite na karty",
+  "resultsPage9Text1": "Voľby sa týkajú mnohých tém, ale je tu jedna vec, ktorá naozaj",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Upozornenie, keď bude čas ísť voliť?",
+  "resultsPage10NopButton": "Nie, ďakujem!",
+  "resultsPage10YesButton": "Áááno",
+  "resultsShare": "Zdielať",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} zhody nájdené za posledných 24 hodín",
+  "homePageBackToTest": "Späť k testu",
+  "homePageMyResults": "Moje výsledky",
+  "homePageStartButton": "Spustenie nového testu",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Jazyk",
+  "settingsPageSubtitleLanguage": "Preferujem používať túto aplikáciu v",
+  "settingsPageTextLanguage": "Pre zmenu jazyka, kliknite na aktuálne uvedený jazyk",
+  "settingsPageTitleAbout": "O nás",
+  "settingsPageTextAbout": "Palumba nie je spoločnosť, ani politická strana, ani vláda. Sme nezávislá nezisková organizácia 120+ mladých ľudí 🐦 z celej Európy, ktorí sa minulé leto spojili a začali vytvárať túto aplikáciu. Máme jediný cieľ: pomôcť vám lepšie pochopiť, ako fungujú európske voľby a ktorí kandidáti by mohli byť najbližšie vašim predstavám. Chceme aby ste mohli s väčšou istotou voliť ľudí, ktorí podporujú vaše priority. Náš algoritmus má otvorený zdrojový kód a výroky, ku ktorým hľadáte zhodu, boli overené politológmi. Vaše údaje sú taaaak zašifrované, že neexistuje nijaký spôsob ako vás identifikovať :)",
+  "settingsPageTitleAssociation": "Organizácia",
+  "settingsPageTitlePartners": "Partneri",
+  "settingsPageTextPartners": "Prehlasujeme, že nasledujúci partneri nijako neovplyvnili obsah aplikácie, ktorá zostáva nestrannou iniciatívou s jasným cieľom: pomôcť vám pochopiť, kto podporuje vaše názory na európskej a vnútroštátnej úrovni.",
+  "settingsPageSubtitle1": "Hlavní sponzori",
+  "settingsPageSubtitle2": "Európski partneri",
+  "settingsPageSubtitle3": "Akademický partner",
+  "settingsPageSubtitle4": "Partneri z národných inštitúcií",
+  "settingsPageSubtitle5": "Poskytovatelia služieb",
+  "settingsPageShareButtonText": "Zdielať",
+  "settingsPagePrivacyPolicy": "Ochrana dát"
 }
