--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sl.arb
@@ -2,95 +2,104 @@
   "@@locale": "sl",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "ok": "Ok",
+  "yes": "Da",
+  "no": "Ne",
+  "cancel": "Prekliči",
+  "textContinue": "Naprej",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Na naši strani je prišlo do težave. Prosim, poskusite znova kasneje.",
+  "skip": "Preskoči",
+  "neutral": "Nevtralno",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Izgleda, da nimate internetne povezave",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Nadaljujemo v slovenščini? :)",
+  "languagePageSubtitle": "To lahko kasneje spremeniš v nastavitvah.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Če ti ta prikupna golobica ne more pomagati pri glasovanju v juniju, potem pa ti res nič ne more.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Najdi svoj match in osmeritev za evropske volitve.",
+  "entranceMatchesFoundQuote": "{count} ujemanj v zadnjih 24h",
+  "entranceStartButton": "Odpri Palumbo",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Madžarska",
+  "denmark": "Danska",
+  "germany": "Nemčija",
+  "spain": "Španija",
+  "france": "Francija",
+  "poland": "Poljska",
+  "romania": "Romunija",
+  "sweden": "Švedska",
+  "onBoardingStep1Title": "Kje boš glasoval?",
+  "onBoardingStep1Subtitle": "Ne vem",
+  "onBoardingStep2Title": "Starost",
+  "onBoardingStep3Title": "Identificiram se kot",
+  "onBoardingStep3Option1": "Ženska",
+  "onBoardingStep3Option2": "Moški",
+  "onBoardingStep3Option3": "Gender-fluid",
+  "onBoardingStep3Option4": "Non-binary",
+  "onBoardingStep3Option5": "Drugo",
+  "onBoardingNotAnswerButton": "Ne želim razkriti",
+  "onBoardingCardQuestion": "Nimam pojma, za koga glasovati na evropskih volitvah leta 2024",
+  "onBoardingLastStepTitle": "Svajpaj glede na svojo preferenco",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Tvoji rezultati so na poti :)",
+  "loadingResultsPageTitle2": "To bo hitreje kot dobiti vstopnice za Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Iskanje ujemanj z listami kandidatov v {country}  🔍",
+  "loadingResultsPageTitle4": "Skoraj pripravljeno,<br>še zadnji pregled ...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "En match in še veliko več 👉👈",
+  "resultsPage1Text": "Na naslednjih zaslonih boste odkrili vam najbolj kompatibilno skupino v Evropskem parlamentu, sezname lokalnih kandidatov v vaši državi za evropske volitve junija in še nekaj dodatnih informacij, prilagojenih vašim odgovorom 😌",
+  "resultsPage1Button": "Pritisni za nadaljevanje",
+  "resultsPage2_1Title": "Iskreno, med",
+  "resultsPage2_2Title": "in mano, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage3Title": "Ujemanje z evropskimi parlamentarnimi skupinami",
+  "resultsPage4TitleTop": "Pro-EU Integration",
+  "resultsPage4TitleBottom": "Anti-EU Integration",
+  "resultsPage4TitleLeft": "Levica",
+  "resultsPage4TitleRight": "Desnica",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Bolj specifično, kateri evropski parlamentarni skupini sem bližje?",
+  "resultsPage5Topic1": "Okoljska problematika",
+  "resultsPage5Topic2": "Človekove in socialne pravice",
+  "resultsPage5Topic3": "Posredovanje v gospodarstvu",
+  "resultsPage6_1Title": "Dobro je vedeti, katera skupina mi je najbliže...",
+  "resultsPage6_2Title": "Vseeno, na evropskih volitvah glasujemo za lokalne kandidate",
+  "resultsPage6Text": "Na naslednjih zaslonih boste odkrili sezname kandidatov v vaši državi, ki so najverjetneje povezani z vašim ujemanjem.",
+  "resultsPage7Title": "Kandidati v {country}, ki se najbolj ujemajo z/s {group}",
+  "resultsPage7Disclaimer": "Brez posebnega vrstnega reda.",
+  "resultsPage7NoLocalCandidates": "V {country} lokalne stranke niso bile najdene",
+  "resultsPage8_1Text": "Na temo {topic}, ste {percentage}% bolj v smeri",
+  "resultsPage8_2Text": "Aktivno ukrepanje proti podnebnim spremembam",
+  "resultsPage8Help": "Ste borec/ka proti podnebnim spremembam! Verjamete, da je za reševanje podnebne krize potrebno skupno delovanje, pri čemer okolje vsi postavijo za svojo najvišjo prioriteto. Ne moti vas, če EU v ta namen regulira podjetja. Konec koncev, čemu gospodarska rast, če postane planet nenaseljiv?",
+  "resultsPage9Help": "Kliknite na kartice, da jih premešate",
+  "resultsPage9Text1": "Pred volitvami obravnavamo veliko tem, vendar obstaja ena stvar, ki resnično",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Vas obvestimo, ko bo čas za glasovanje?",
+  "resultsPage10NopButton": "Ne hvala!",
+  "resultsPage10YesButton": "Jaaaaa",
+  "resultsShare": "Delite",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} ujemanj v zadnjih 24h",
+  "homePageBackToTest": "Nazaj na reševanje",
+  "homePageMyResults": "Moji rezultati",
+  "homePageStartButton": "Prični z novim testom",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Jezik",
+  "settingsPageSubtitleLanguage": "Aplikacijo bi rad uporabljal v",
+  "settingsPageTextLanguage": "Za spremembo jezika, kliknite na trenutnega",
+  "settingsPageTitleAbout": "O aplikaciji",
+  "settingsPageTextAbout": "Palumba ni podjetje, niti politična stranka, niti vlada. Smo neodvisno neprofitno združenje več kot 120 mladih ljudi 🐦 iz vse Evrope. Zbrali smo se lansko poletje in začeli ustvarjati to aplikacijo. Imamo en cilj: vam pomagati da bolje razumete, kako delujejo evropske volitve in kateri kandidati se najbolje ujemajo z vašimi idejami, tako da boste lahko bolj samozavestno glasovali za ljudi, ki podpirajo vaše prioritete. Naš algoritem je odprtokoden, izjave, ki jih podrsate, so pregledali politični znanstveniki, vaši podatki pa so tako zelo šifrirani, da ni možnosti, da bi vas kdajkoli identificirali :)",
+  "settingsPageTitleAssociation": "Društvo",
+  "settingsPageTitlePartners": "Partnerji",
+  "settingsPageTextPartners": "Poudariti moramo še, da partnerji nimajo uredniške moči nad vsebino aplikacije, ki ostaja nepristranska in z jasnim ciljem: pomagati vam razumeti, kdo podpira vaša mnenja na evropskih in nacionalnih ravneh.",
+  "settingsPageSubtitle1": "Glavni sponzorji",
+  "settingsPageSubtitle2": "Evropski partnerji",
+  "settingsPageSubtitle3": "Akademski partnerji",
+  "settingsPageSubtitle4": "Nacionalni institucionalni partnerji",
+  "settingsPageSubtitle5": "Ponudniki storitev",
+  "settingsPageShareButtonText": "Delite",
+  "settingsPagePrivacyPolicy": "Varstvo podatkov"
 }
