--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_el.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_el.arb
@@ -2,95 +2,104 @@
   "@@locale": "el",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "ΟΚ",
+  "yes": "Ναι",
+  "no": "Όχι",
+  "cancel": "Ακύρωση",
+  "textContinue": "Συνέχεια",
+  "alertServerErrorTitle": "Ουπς!",
+  "alertServerErrorText": "Κάτι πήγε στραβά από την πλευρά μας. Παρακαλώ δοκιμάστε ξανά αργότερα.",
+  "skip": "Παράλειψη",
+  "neutral": "Ουδέτερος(-η)",
+  "faq": "ΣΥΧΝΕΣ ΕΡΩΤΗΣΕΙΣ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Φαίνεται πως δεν έχετε σύνδεση στο διαδίκτυο",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Ας συνεχίσουμε στα ελληνικά :)",
+  "languagePageSubtitle": "Αυτό μπορεί να αλλάξει αργότερα από τις ρυθμίσεις.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Αν αυτό το χαριτωμένο περιστέρι δε μπορεί να σας βοηθήσει να  ψηφίσετε τον  Ιούνιο, τίποτα δε θα μπορέσει.",
+  "entranceTitle2": "Σύρετε τη γνώμη σας για θέματα που σας αφορούν.",
+  "entranceTitle3": "Μάθετε την αντιστοιχία σας και προσανατολιστείτε για το ποιους θα ψηφίσετε στις Εκλογές.",
+  "entranceMatchesFoundQuote": "Βρέθηκαν {count} αντιστοιχίες τις τελευταίες 24 ώρες",
+  "entranceStartButton": "Έναρξη Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Ουγγαρία",
+  "denmark": "Δανία",
+  "germany": "Γερμανία",
+  "spain": "Ισπανία",
+  "france": "Γαλλία",
+  "poland": "Πολωνία",
+  "romania": "Ρουμανία",
+  "sweden": "Σουηδία",
+  "onBoardingStep1Title": "Πού θα ψηφίσετε;",
+  "onBoardingStep1Subtitle": "Δεν γνωρίζω",
+  "onBoardingStep2Title": "Ηλικία",
+  "onBoardingStep3Title": "Προσδιορίζομαι ως",
+  "onBoardingStep3Option1": "Γυναίκα",
+  "onBoardingStep3Option2": "Άντρας",
+  "onBoardingStep3Option3": "Άτομο με ρευστή ταυτότητα φύλου (gender-fluid)",
+  "onBoardingStep3Option4": "Μη-δυαδικό άτομο (non-binary)",
+  "onBoardingStep3Option5": "Άλλο",
+  "onBoardingNotAnswerButton": "Προτιμώ να μην αναφέρω",
+  "onBoardingCardQuestion": "Δεν έχω ιδέα για το ποιους να ψηφίσω στις Ευρωεκλογές του 2024",
+  "onBoardingLastStepTitle": "Σύρετε ανάλογα με το πόσο συμφωνείτε",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Τα εξατομικευμένα σας αποτελέσματα είναι καθ' οδόν :)",
+  "loadingResultsPageTitle2": "Αυτό θα είναι πιο γρήγορο από το να βρείτε εισιτήρια για την Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Εύρεση αντιστοιχιών με λίστες υποψηφίων στη {country}🔍",
+  "loadingResultsPageTitle4": "Σχεδόν έτοιμα, ένας τελευταίος έλεγχος...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Μια αντιστοιχία και πολλά άλλα 👉👈",
+  "resultsPage1Text": "Στις επόμενες οθόνες, θα ανακαλύψετε την πιο συμβατή σας Ομάδα στο Ευρωπαϊκό Κοινοβούλιο, τις αντίστοιχες τοπικές λίστες για να ψηφίσετε τον Ιούνιο στη χώρα σας, ενώ ανακαλύψαμε και μερικά επιπλέον πράγματα με βάση τις απαντήσεις σας 😌",
+  "resultsPage1Button": "Πατήστε για να συνεχίσετε",
+  "resultsPage2_1Title": "Ειλικρινά, ανάμεσα στο/στη",
+  "resultsPage2_2Title": "και σε εμένα, είναι κάπως ένα Love Story (EU’s Version)",
+  "resultsPage3Title": "Πόσο κοντά βρίσκομαι στις Ομάδες του Ευρωπαϊκού Κοινοβουλίου",
+  "resultsPage4TitleTop": "Υπέρ της ένταξης στην ΕΕ",
+  "resultsPage4TitleBottom": "Κατά της ένταξης στην ΕΕ",
+  "resultsPage4TitleLeft": "Αριστερά",
+  "resultsPage4TitleRight": "Δεξιά",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Σχετικά με πιο συγκεκριμένα θέματα, σε ποια ομάδα του Ευρωπαϊκού Κοινοβουλίου βρίσκομαι πιο κοντά;",
+  "resultsPage5Topic1": "Περιβαλλοντικά θέματα",
+  "resultsPage5Topic2": "Ανθρώπινα & Κοινωνικά Δικαιώματα",
+  "resultsPage5Topic3": "Οικονομική παρέμβαση",
+  "resultsPage6_1Title": "Εντάξει, είναι κούλ να ξέρω ποια ομάδα με καταλαβαίνει...",
+  "resultsPage6_2Title": "Αλλά στις Ευρωεκλογές, ψηφίζουμε για μια τοπική λίστα",
+  "resultsPage6Text": "Στις επόμενες οθόνες, θα ανακαλύψετε τους καταλόγους υποψηφίων στη χώρα σας που είναι πιο πιθανό να ενταχθούν στην αντιστοιχία σας.",
+  "resultsPage7Title": "Οι υποψήφιοι στη {country} που ευθυγραμμίζονται περισσότερο με την/το {group}",
+  "resultsPage7Disclaimer": "Χωρίς συγκεκριμένη σειρά.",
+  "resultsPage7NoLocalCandidates": "Δεν βρέθηκαν τοπικά κόμματα στη {country}",
+  "resultsPage8_1Text": "Όσον αφορά τα/την {topic}, είστε {percentage}% υπέρ",
+  "resultsPage8_2Text": "Ενεργού Δράσης για το κλίμα",
+  "resultsPage8Help": "Είσαι μαχητής της κλιματικής αλλαγής! Πιστεύεις ότι η αντιμετώπιση της κλιματικής κρίσης απαιτεί συλλογική δράση, την οποία όλοι πρέπει να θέσουν σε ύψιστη προτεραιότητα. Δεν σε πειράζει που η ΕΕ ρυθμίζει τις εταιρείες για το σκοπό αυτό. Εξάλλου, τι νόημα έχει η οικονομική ανάπτυξη αν ο πλανήτης γίνει μη βιώσιμος;",
+  "resultsPage9Help": "Κάντε κλικ στις κάρτες για ανακάτεμα",
+  "resultsPage9Text1": "Οι εκλογές αφορούν πολλά θέματα, αλλά υπάρχει ένα πράγμα που πραγματικά",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Θέλετε μια ειδοποίηση όταν έρθει η ώρα να πάτε να ψηφίσετε;",
+  "resultsPage10NopButton": "Όχι, ευχαριστώ!",
+  "resultsPage10YesButton": "Ναιιιιι",
+  "resultsShare": "Κοινοποίηση",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "Βρέθηκαν {count} αντιστοιχίες τις τελευταίες 24 ώρες",
+  "homePageBackToTest": "Επιστροφή στο τεστ",
+  "homePageMyResults": "Τα αποτελέσματά μου",
+  "homePageStartButton": "Έναρξη νέου τεστ",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Γλώσσα",
+  "settingsPageSubtitleLanguage": "Προτιμώ να χρησιμοποιήσω αυτήν την εφαρμογή στα",
+  "settingsPageTextLanguage": "Για να αλλάξετε τη γλώσσα, κάντε κλικ στην τρέχουσα γλώσσα",
+  "settingsPageTitleAbout": "Σχετικά",
+  "settingsPageTextAbout": "Η Palumba δεν είναι εταιρεία, ούτε πολιτικό κόμμα, ούτε κυβέρνηση. Είμαστε μια ανεξάρτητη μη κερδοσκοπική ένωση 120+ νέων 🐦 από όλη την Ευρώπη που μαζεύτηκαν πέρυσι το καλοκαίρι και άρχισαν να δημιουργούν αυτή την εφαρμογή. Έχουμε έναν στόχο: να σας βοηθήσουμε να καταλάβετε καλύτερα πώς λειτουργούν οι ευρωπαϊκές εκλογές και ποιες λίστες υποψηφίων θα μπορούσαν να ταιριάζουν με τις ιδέες σας, ώστε να μπορείτε να ψηφίσετε με μεγαλύτερη αυτοπεποίθηση ανθρώπους που υποστηρίζουν τις προτεραιότητές σας. Ο αλγόριθμός μας είναι ανοιχτού κώδικα, οι δηλώσεις στις οποίες κάνετε swipe έχουν ελεγχθεί από πολιτικούς επιστήμονες και τα δεδομένα σας είναι τόσο κρυπτογραφημένα που δεν έχουμε τρόπο να σας αναγνωρίσουμε ποτέ :)",
+  "settingsPageTitleAssociation": "Η οργάνωση",
+  "settingsPageTitlePartners": "Συνεργάτες",
+  "settingsPageTextPartners": "Είναι σημαντικό να σας πούμε ότι οι συνεργάτες δεν έχουν καμία συντακτική εξουσία στο περιεχόμενο της εφαρμογής, η οποία παραμένει μια μη-κομματική πρωτοβουλία με σαφή στόχο: να σας βοηθήσει να καταλάβετε ποιοι υποστηρίζουν τις απόψεις σας σε ευρωπαϊκό και εθνικό επίπεδο.",
+  "settingsPageSubtitle1": "Κύριοι Χορηγοί",
+  "settingsPageSubtitle2": "Ευρωπαϊκοί Συνεργάτες",
+  "settingsPageSubtitle3": "Ακαδημαϊκός Συνεργάτης",
+  "settingsPageSubtitle4": "Εθνικοί Θεσμικοί Συνεργάτες",
+  "settingsPageSubtitle5": "Πάροχοι Υπηρεσιών",
+  "settingsPageShareButtonText": "Κοινοποίηση",
+  "settingsPagePrivacyPolicy": "Προστασία Δεδομένων"
 }
