--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -2,95 +2,104 @@
   "@@locale": "hr",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "Slažem se",
+  "yes": "Da",
+  "no": "Ne",
+  "cancel": "Odustani",
+  "textContinue": "Nastavi",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Nešto je pošlo po krivu s naše strane. Molimo pokušaj ponovno kasnije.",
+  "skip": "Preskoči",
+  "neutral": "Nepristran",
+  "faq": "Često postavljena pitanja",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Čini se da ti je nestala internetska veza",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Nastavimo na hrvatskom? :)",
+  "languagePageSubtitle": "Ovo možeš kasnije promijeniti u postavkama.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Ako ti ni ovaj slatki golub ne može pomoći da glasaš u lipnju, onda ništa neće.",
+  "entranceTitle2": "Povuci prstom u smjeru koji odražava tvoje mišljenje o važnim temama.",
+  "entranceTitle3": "Otkrij svoj politički \"spoj\" i male smjernice za koga glasati na nadolazećim izborima.",
+  "entranceMatchesFoundQuote": "{count} parova pronađeno u posljednja 24 sata",
+  "entranceStartButton": "Pokreni Palumbu",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Mađarska",
+  "denmark": "Danska",
+  "germany": "Njemačka",
+  "spain": "Španjolska",
+  "france": "Francuska",
+  "poland": "Poljska",
+  "romania": "Rumunjska",
+  "sweden": "Švedska",
+  "onBoardingStep1Title": "Gdje ćeš glasati?",
+  "onBoardingStep1Subtitle": "Ne znam",
+  "onBoardingStep2Title": "Moja dob",
+  "onBoardingStep3Title": "Identificiram se kao",
+  "onBoardingStep3Option1": "Žena",
+  "onBoardingStep3Option2": "Muškarac",
+  "onBoardingStep3Option3": "Rodno-fluidna osoba",
+  "onBoardingStep3Option4": "Nebinarna osoba",
+  "onBoardingStep3Option5": "Drugo",
+  "onBoardingNotAnswerButton": "Ne želim reći",
+  "onBoardingCardQuestion": "Nemam pojma za koga glasati na Europskim izborima 2024",
+  "onBoardingLastStepTitle": "Povuci prstom u smjeru s kojim se slažeš",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Tvoji personalizirani rezultati su na putu :)",
+  "loadingResultsPageTitle2": "Ovo će biti brže od kupnje ulaznice za Taylor Swift koncert 👀 ",
+  "loadingResultsPageTitle3": "Spajanje s idealnom listom kandidata u {country} 🔍",
+  "loadingResultsPageTitle4": "Skoro spremno, još samo jedna provjera...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Tvoj par, i više od toga 👉👈",
+  "resultsPage1Text": "U narednim karticama saznat ćeš sve o grupi u Europskom parlamentu s kojom se najbolje slažeš, pripadajućim lokalnim listama za koje možeš glasati u lipnju u svojoj zemlji te nekoliko dodatnih zanimljivosti na temelju ponuđenih odgovora 😌",
+  "resultsPage1Button": "Pritisni za nastavak",
+  "resultsPage2_1Title": "Iskreno, između",
+  "resultsPage2_2Title": "i mene, skriva se prava Love Story (EU verzija)",
+  "resultsPage3Title": "Koliko se slažem s pojedinim skupinama u Europskom parlamentu",
+  "resultsPage4TitleTop": "Za EU integraciju",
+  "resultsPage4TitleBottom": "Protiv EU integracije",
+  "resultsPage4TitleLeft": "Lijevo",
+  "resultsPage4TitleRight": "Desno",
+  "resultsPage4TitleUserHere": "To sam ja, bok!",
+  "resultsPage5Title": "S kojom se zastupničkom skupinom u Europskom parlamentu najviše slažem po određenim temama?",
+  "resultsPage5Topic1": "Pitanja okoliša",
+  "resultsPage5Topic2": "Ljudska i socijalna prava",
+  "resultsPage5Topic3": "Ekonomska intervencija",
+  "resultsPage6_1Title": "Okej, baš je fora znati koja me skupina najviše razumije...",
+  "resultsPage6_2Title": "Ali na Europskim izborima, glasamo za lokalnu listu",
+  "resultsPage6Text": "U nastavku ćeš saznati koje se kandidatske liste u tvojoj zemlji najviše podudaraju s tvojim parom.",
+  "resultsPage7Title": "Kandidati u {country} najviše se podudaraju s {group}",
+  "resultsPage7Disclaimer": "Bez određenog redoslijeda.",
+  "resultsPage7NoLocalCandidates": "Nije pronađena niti jedna lokalna skupina u {country}",
+  "resultsPage8_1Text": "Što se tiče {topic}, {percentage} si više za",
+  "resultsPage8_2Text": "Aktivno klimatsko djelovanje🌱😌",
+  "resultsPage8Help": "Pravi si borac protiv klimatskih promjena! Vjeruješ da klimatska kriza mora biti prioritet svakoga i da njezino suzbijanje zahtjeva udružene napore. Nemaš ništa protiv da EU regulira poduzeća u tu svrhu. Uostalom, kakva je korist od ekonomskog rasta ako planet postane nenastanjiv?",
+  "resultsPage9Help": "Stisni na karte kako bi se promiješale",
+  "resultsPage9Text1": "Izbori se tiču mnogih stvari, ali jedna stvar posebno",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Želiš li obavijest kada je vrijeme za glasanje?",
+  "resultsPage10NopButton": "Ne hvala!",
+  "resultsPage10YesButton": "Daaaa",
+  "resultsShare": "Podijeli",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} parova pronađeno u posljednja 24 sata",
+  "homePageBackToTest": "Povratak na test",
+  "homePageMyResults": "Moji rezultati",
+  "homePageStartButton": "Pokreni novi test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Jezik",
+  "settingsPageSubtitleLanguage": "Želim koristiti aplikaciju na",
+  "settingsPageTextLanguage": "Za promjenu jezika, pritisni trenutni odabir",
+  "settingsPageTitleAbout": "O nama",
+  "settingsPageTextAbout": "Palumba nije poduzeće, politička stranka, niti vlada. Mi smo nezavisna i neprofitna organizacija od 120+ mladih ljudi 🐦 iz cijele Europe koja se udružila prošloga ljeta i pokrenula izradu ove aplikacije sa samo jednim ciljem: želimo ti pomoći da bolje razumiješ kako funkcioniraju Europski izbori i koja lista kandidata najbolje odgovara tvojim stavovima i time ti olakšali odabir kada dođe vrijeme glasovanja. Naš je algoritam otvorenog tipa, izjave su provjerene od strane političkih znanstvenika, a tvoji su podaci zaštićeni do te mjere da nema šanse da saznamo tko si :)",
+  "settingsPageTitleAssociation": "Organizacija",
+  "settingsPageTitlePartners": "Partneri",
+  "settingsPageTextPartners": "Važno je napomenuti kako partneri nemaju nikakvu uredničku moć nad sadržajem aplikacije, koja ostaje nestranačka inicijativa s jasnim ciljem: pomoći ti da razumiješ tko podržava tvoje mišljenje na europskoj i nacionalnoj razini.",
+  "settingsPageSubtitle1": "Glavni sponzori",
+  "settingsPageSubtitle2": "Europski partneri",
+  "settingsPageSubtitle3": "Akademski partneri",
+  "settingsPageSubtitle4": "Nacionalni institucionalni partneri",
+  "settingsPageSubtitle5": "Pružatelji usluga",
+  "settingsPageShareButtonText": "Podijeli",
+  "settingsPagePrivacyPolicy": "Zaštita podataka"
 }
