--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pt.arb
@@ -1,96 +1,105 @@
 {
   "@@locale": "pt-PT",
-  "appName": "Palumba EU",
+  "appName": "Palumba UE",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
+  "ok": "Ok",
+  "yes": "Sim",
+  "no": "Não",
+  "cancel": "Cancelar",
   "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorText": "Algo deu errado no nosso lado. Por favor, tente novamente mais tarde.",
+  "skip": "Pular",
+  "neutral": "Neutro",
+  "faq": "Perguntas frequentes",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Parece que você não está conectado à internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Vamos continuar em português? :)",
+  "languagePageSubtitle": "Isto pode ser alterado posteriormente nas configurações.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceMatchesFoundQuote": "{count} matches encontrados nas últimas 24h",
+  "entranceStartButton": "Iniciar Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
+  "hungary": "Hungria",
   "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
+  "germany": "Alemanha",
+  "spain": "Espanha",
   "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "poland": "Polônia",
+  "romania": "Romênia",
+  "sweden": "Suécia",
+  "onBoardingStep1Title": "Onde vai votar?",
+  "onBoardingStep1Subtitle": "Eu não sei",
+  "onBoardingStep2Title": "Minha idade",
+  "onBoardingStep3Title": "Eu me identifico como",
+  "onBoardingStep3Option1": "Mulher",
+  "onBoardingStep3Option2": "Homem",
+  "onBoardingStep3Option3": "Gênero-fluido",
+  "onBoardingStep3Option4": "Não-binário",
+  "onBoardingStep3Option5": "Outro",
+  "onBoardingNotAnswerButton": "Prefiro não dizer",
+  "onBoardingCardQuestion": "Não faço ideia de quem votar para as eleições europeias de 2024",
+  "onBoardingLastStepTitle": "Deslize conforme o seu acordo",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Os seus resultados personalizados estão a caminho :)",
+  "loadingResultsPageTitle2": "Isto será mais rápido que conseguir ingressos para Taylor Swift 👀",
+  "loadingResultsPageTitle3": "Encontrando matches com as listas de candidatos na/no {country} 🔍",
+  "loadingResultsPageTitle4": "Quase pronto, <br>uma última verificação...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Um match e muito mais 👉👈",
+  "resultsPage1Text": "Nos ecrãs seguintes, você descobrirá o seu grupo mais compatível no Parlamento da UE, as listas locais correspondentes para votar em junho no seu país, e até encontramos algumas coisas extras com base nas suas respostas 😌",
+  "resultsPage1Button": "Pressione para continuar",
+  "resultsPage2_1Title": "Honestamente, entre o(a)",
+  "resultsPage2_2Title": "e eu, é como uma Love Story (EU's Version)",
+  "resultsPage3Title": "Quão perto estou dos grupos do Parlamento Europeu",
+  "resultsPage4TitleTop": "Pró-Integração UE",
+  "resultsPage4TitleBottom": "Contra Integração UE",
+  "resultsPage4TitleLeft": "Esquerda",
+  "resultsPage4TitleRight": "Direita",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Quanto a temas mais específicos, qual é o grupo do Parlamento Europeu que eu estou mais próximo?",
+  "resultsPage5Topic1": "Questões ambientais",
+  "resultsPage5Topic2": "Direitos Humanos e Sociais",
+  "resultsPage5Topic3": "Intervenção econômica",
+  "resultsPage6_1Title": "Ok, é legal saber qual grupo me traz...",
+  "resultsPage6_2Title": "Mas nas eleições europeias, nós votamos numa lista local",
+  "resultsPage6Text": "Nos ecrãs seguintes, você vai descobrir a lista de candidatos do seu país que provavelmente estarão entre os seus matches.",
+  "resultsPage7Title": "Os candidatos em {country} mais alinhados com {group}",
+  "resultsPage7Disclaimer": "Em nenhuma ordem específica.",
+  "resultsPage7NoLocalCandidates": "Nenhum partido local encontrado em {country}",
+  "resultsPage8_1Text": "Em {topic}, você está com {percentage}% a mais",
+  "resultsPage8_2Text": "Ação Climática ativa 🌱😌",
+  "resultsPage8Help": "Você é um combatente das mudanças climáticas! Você acredita que a resolução da crise climática exige uma acção colectiva, com todos a torná-la uma prioridade absoluta. Você não se importa com a UE regulando as empresas nesse sentido. Pois, de que serve o crescimento econômico se o planeta se tornar inabitável?",
+  "resultsPage9Help": "Clique nos cartões para embaralhar",
+  "resultsPage9Text1": "Eleições são sobre vários tópicos, mas há uma coisa que realmente",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Uma notificação para quando for a hora de votar?",
+  "resultsPage10NopButton": "Não, obrigado!",
+  "resultsPage10YesButton": "Simmmm",
+  "resultsShare": "Compartilhar",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} matches encontrados nas últimas 24h",
+  "homePageBackToTest": "Voltar ao teste",
+  "homePageMyResults": "Meus resultados",
+  "homePageStartButton": "Iniciar um novo teste",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Idioma",
+  "settingsPageSubtitleLanguage": "Eu prefiro usar este app em",
+  "settingsPageTextLanguage": "Para alterar o idioma, clique no atual",
+  "settingsPageTitleAbout": "Sobre",
+  "settingsPageTextAbout": "Palumba não é uma empresa, nem um partido político, nem um governo. Somos uma associação independente sem fins lucrativos de mais de 120 jovens 🐦 de toda a Europa que se reuniram no verão passado e começaram a desenvolver esse aplicativo. Temos um objetivo: ajudá-lo a compreender melhor o funcionamento das eleições europeias e quais as listas de candidatos que poderiam corresponder às suas ideias, para que você possa votar com mais confiança nas pessoas que apoiam as suas prioridades. Nosso algoritmo é open-source, as declarações que você passa foram analisadas por cientistas políticos, e seus dados são criptografados de tal maneira que nós não temos como te identificar :)",
+  "settingsPageTitleAssociation": "A associação",
+  "settingsPageTitlePartners": "Parceiros",
+  "settingsPageTextPartners": "É importante dizer que os parceiros não têm poder editorial sobre o conteúdo do aplicativo, que continua a ser uma iniciativa não partidária com um objectivo claro: ajudá-los a compreender quem apoia as vossas opiniões a nível europeu e nacional.",
+  "settingsPageSubtitle1": "Principais Patrocinadores",
+  "settingsPageSubtitle2": "Parceiros Europeus",
+  "settingsPageSubtitle3": "Parceiro Acadêmico",
+  "settingsPageSubtitle4": "Parceiros Institucionais nacionais",
+  "settingsPageSubtitle5": "Prestadores de serviços",
+  "settingsPageShareButtonText": "Compartilhe",
+  "settingsPagePrivacyPolicy": "Política de Privacidade"
 }
